--- a/.github/workflows/deploy-emacs-client.yml
+++ b/.github/workflows/deploy-emacs-client.yml
@@ -17,7 +17,7 @@ jobs:
         # https://github.com/docker/build-push-action/tree/releases/v1#readme
         uses: docker/build-push-action@v1
         with:
-          path: ci/docker-emacs-learn-ocaml-client
+          # path: ci/docker-emacs-learn-ocaml-client
           build_args: "base=ocamlsf/learn-ocaml-client,version=${{ steps.branch.outputs.branch }}"
           always_pull: true
           add_git_labels: true
